--lesson_6-- UPD solutions

--- a/lesson_6/cart_event.html
+++ b/lesson_6/cart_event.html
@@ -29,10 +29,11 @@
         </div>
     </header>
 
-    <section class="catalog">
+    <section class="page">
         <div class="container">
             
-            <div class="catalog__item" id="catalogItem">
+            <div class="catalog" id="catalogItem"></div>
+            <div class="basket" id="basketItem"></div>
 
         </div> <!-- ./container -->
     </section>
