--lesson_7-- Added solutions

--- a/lesson_6/cart_event.html
+++ b/lesson_6/cart_event.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Продуктовый интернет магазин</title>
 </head>
-<body>
+<body class="body">
 
+    <!-- Header -->
     <header class="header">
         <div class="container">
             <div class="header__item">
@@ -15,9 +16,9 @@
                     <a class="header__link" href="#">ProMag</a>
                 </div>
                 <div class="header__cart">
-                    <div class="header__cart-image">
-                        <img src="assets/img/cart_img.svg" alt="Корзина">
-                    </div>
+                    <button class="header__cart-button" id="headerButton" type="button">
+                        <img class="header__img" src="assets/img/cart_img.svg" alt="Корзина">
+                    </button>
                     <div class="counter" id="headerCounter">
                         <p class="counter__text" id="cartCounter">0</p>
                     </div>
@@ -26,9 +27,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> <!-- ./container -->
     </header>
 
+
+    <!-- Page -->
     <section class="page">
         <div class="container">
             
@@ -37,6 +40,16 @@
 
         </div> <!-- ./container -->
     </section>
+
+
+    <!-- Basket Modal -->
+    <div class="basket-modal" id="goodsModal">
+        <div class="container">
+
+            <div class="basket-modal__inner" id='basketModal'></div>
+
+        </div>
+    </div>
 
 
     <script src="app.js"></script>
